2007-02-27  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (do-script-uninstall): Remove PKG_ADD.
	* examples/Makefile.in (uninstall): Don't remove files listed in
	$(SCRIPTS) from $(srcdir).
	Remove www.octave.org-octave.desktop, not octave.desktop.

	* run-octave.in (run-octave.in): Use --no-initial-path.
	Rename to qargs to args.  Use $args not "$args" when invoking Octave.
	Try harder to get quoting right when passing args to Octave.

2007-02-26  John W. Eaton  <jwe@octave.org>

	* octMakefile.in (DISTDIRS): Eliminate variable.

2007-02-26  From Michael Goffioul  <michael.goffioul@swing.be>

	* octMakefile.in, dlfcn/Makefile.in, emacs/Makefile.in:
	Use $(LN_S) instead of ln or ln -s.

	* octMakefile.in (dist): Use -9 instead of --best with gzip/bzip2.

2007-02-21  John W. Eaton  <jwe@octave.org>

	* configure.in: Also warn about missing functionality for
	--without-glpk or --without-curl options.  Print curl library
	warning in summary.

2007-02-20  Rafael Laboissiere  <rafael@debian.org>

	* configure.in: Check for versions of GLPK prior to 4.15 and set
	the GLPK_PRE_4_15 macro accordingly.

2007-02-16  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in: Use OCTAVE_PREFIX, not OCTAVE_CONF_PREFIX, in sed
	substitutions.
	* octave-conf.in: Define DATAROOTDIR, not DATADIR, from
	OCTAVE_DATAROOTDIR.
	From Michael Goffioul <michael.goffioul@swing.be>.

2007-02-15  John W. Eaton  <jwe@octave.org>

	* octave-config.in (DATAROOTDIR): Include in list of vars.
	Substitute OCTAVE_HOME.

	* Makeconf.in (MKOCTFILE_INCFLAGS, MKOCTFILE_LFLAGS): Delete vars.
	(do-subst-config-vals): Don't substitute them.
	Also substitute OCTAVE_CONF_INCLUDEDIR, OCTAVE_CONF_OCTINCLUDEDIR,
	OCTAVE_CONF_OCTLIBDIR, and OCTAVE_CONF_PREFIX here.
	* mkoctfile.in (OCTAVE_CONF_OCTINCLUDEDIR, OCTAVE_CONF_INCLUDEDIR,
	OCTAVE_CONF_OCTLIBDIR): Substitute values and perform OCTAVE_HOME
	substitution here.
	(DEFAULT_INCFLAGS, DEFAULT_LFLAGS): New variables.  Use them to