@@ -29,7 +29,7 @@ EXTERN_CFLAGS="$CFLAGS"
 EXTERN_CXXFLAGS="$CXXFLAGS"
 
 AC_INIT
-AC_REVISION($Revision: 1.557 $)
+AC_REVISION($Revision: 1.558 $)
 AC_PREREQ(2.57)
 AC_CONFIG_SRCDIR([src/octave.cc])
 AC_CONFIG_HEADER(config.h)
@@ -594,7 +594,7 @@ GLPK_LIBS=
 if test -n "$glpk_lib"; then
   AC_CHECK_LIB($glpk_lib, glp_lpx_simplex, [
     GLPK_LIBS="-l$glpk_lib"
-    AC_DEFINE(GLPK_PRE_4_15, 1, [Define if GLPK version is less than 4.15.])], [
+    AC_DEFINE(GLPK_PRE_4_14, 1, [Define if GLPK version is less than 4.14.])], [
     AC_CHECK_LIB($glpk_lib, _glp_lpx_simplex, [GLPK_LIBS="-l$glpk_lib"], [])])
   if test -n "$GLPK_LIBS"; then
     AC_CHECK_HEADERS(glpk.h, [
