@@ -1,3 +1,8 @@
+2007-03-05  John W. Eaton  <jwe@octave.org>
+
+	* DLD-FUNCTIONS/__glpk__.cc (F__glpk__): Check GLPK_PRE_4_14, not
+	GLPK_PRE_4_15.
+
 2007-03-02  John W. Eaton  <jwe@octave.org>
 
 	* parse.y (Fautoload): Undo previous change.
